exports[`test should render a Button with merged attributes 1`] = `
<button
  aria-disabled={false}
  className="terra-Button terra-Button--default TestClass"
  data-mock="data"
  disabled={false}
  style={
    Object {
      "height": "100px",
    }
  } />
`;

exports[`test should render a default button 1`] = `
<button
  aria-disabled={false}
  className="terra-Button terra-Button--default"
  disabled={false} />
`;

exports[`test should render a link button 1`] = `
<button
  aria-disabled={false}
  className="terra-Button terra-Button--link"
  disabled={false} />
`;

exports[`test should render a primary button 1`] = `
<button
  aria-disabled={false}
  className="terra-Button terra-Button--primary"
  disabled={false} />
`;

exports[`test should render a secondary button 1`] = `
<button
  aria-disabled={false}
  className="terra-Button terra-Button--secondary"
  disabled={false} />
`;

exports[`test should render an icon 1`] = `
<button
  aria-disabled={false}
  className="terra-Button terra-Button--default terra-Button--tiny"
  disabled={false}>
  <img
    alt="icon" />
</button>
`;

exports[`test should render an icon and a text 1`] = `
<button
  aria-disabled={false}
  className="terra-Button terra-Button--default terra-Button--tiny"
  disabled={false}>
  <img
    alt="icon" />
  <span
    className="terra-Button-text">
    text
  </span>
</button>
`;

exports[`test should render as an anchor when provided an href 1`] = `
<a
  aria-disabled={false}
  className="terra-Button terra-Button--default"
  disabled={false}
  href="MockHref">
  <span
    className="terra-Button-text">
    href
  </span>
</a>
`;

exports[`test should render as disabled when set 1`] = `
<button
  aria-disabled={true}
  className="terra-Button terra-Button--default is-disabled"
  disabled={true}
  tabIndex="-1">
  <span
    className="terra-Button-text">
    Disabled
  </span>
</button>
`;
